EEVEE 2.81 VIEWPORT CRASH - having 2 viewports and UV edit window crashes blender #70414

Closed
opened 2019-10-01 11:03:20 +02:00 by Vas · 16 comments

System Information
Operating system: Windows-10-10.0.14393 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.46

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-30 22:00, hash: 60a827a2a9
Worked: 2.80

Short description of error
I finally found a way to replicate this bug.

Apparently if there are two 3D Viewport windows with different shading modes AND an UV edit window (with a texture of the object), entering edit/texture mode on an object immediately crashes blender

  • This only happens on objects that have image texture on them
  • This is an eevee exclusive bug, it doesn't appear to be a problem in cycles

It took me a while to dig this one up :) I think its critical one

2019-10-01 09-39-39.mp4

Exact steps for others to reproduce the error

  • have an object with a texture in eevee mode
  • create another 3D viewport window and an UV editor window (make sure that "image pin" is disabled, it only crashes when UV editor calls the image of the object)
  • change shading mode of one of viewports to something that's not eevee (wireframe/solid mode)
  • enter Edit mode OR Texture paint mode on that object
  • crash
    untitled.blend
**System Information** Operating system: Windows-10-10.0.14393 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.46 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-30 22:00, hash: `60a827a2a9` Worked: 2.80 **Short description of error** I finally found a way to replicate this bug. Apparently if there are two 3D Viewport windows with different shading modes AND an UV edit window (with a texture of the object), entering edit/texture mode on an object immediately crashes blender - This only happens on objects that have image texture on them - This is an eevee exclusive bug, it doesn't appear to be a problem in cycles It took me a while to dig this one up :) I think its critical one [2019-10-01 09-39-39.mp4](https://archive.blender.org/developer/F7783321/2019-10-01_09-39-39.mp4) **Exact steps for others to reproduce the error** - have an object with a texture in eevee mode - create another 3D viewport window and an UV editor window (make sure that "image pin" is disabled, it only crashes when UV editor calls the image of the object) - change shading mode of one of viewports to something that's not eevee (wireframe/solid mode) - enter Edit mode OR Texture paint mode on that object - crash [untitled.blend](https://archive.blender.org/developer/F7783315/untitled.blend)
Author

Added subscriber: @Alumx

Added subscriber: @Alumx
Member

Added subscribers: @fclem, @vas-1, @lichtwerk

Added subscribers: @fclem, @vas-1, @lichtwerk
Member

Afraid I cannot reproduce [linux, 970m, 435.21 drivers], both in 60a827a2a9 and 3b23685c7d.

@vas-1: does this happen with newer drivers as well?
@fclem: does this ring a bell?

Afraid I cannot reproduce [linux, 970m, 435.21 drivers], both in 60a827a2a991 and 3b23685c7dc1. @vas-1: does this happen with newer drivers as well? @fclem: does this ring a bell?
Author

@lichtwerk I just tested and can confirm that this bug is related to my custom user settings, I forgot to do this on factory defaults in which case it works perfectly normal
So I guess its invalid? ^^"
I'll try to rebuild my setup again from scratch to see if its some setting that's triggering this error

@lichtwerk I just tested and can confirm that this bug is related to my custom user settings, I forgot to do this on factory defaults in which case it works perfectly normal So I guess its invalid? ^^" I'll try to rebuild my setup again from scratch to see if its some setting that's triggering this error
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Philipp Oeser self-assigned this 2019-10-02 12:57:29 +02:00
Member

Thx for getting back.
Guess we have to archive this for now then [should have asked for Factory Defaults in the first place ;)]
But yes, please report back if you've found what caused this in your setup (thats always helpful if others run into the same situation...), we can always reopen then.

Thx for getting back. Guess we have to archive this for now then [should have asked for Factory Defaults in the first place ;)] But yes, please report back if you've found what caused this in your setup (thats always helpful if others run into the same situation...), we can always reopen then.
Author

@lichtwerk Actually hold on! I just replicated this on default too
Apparently UV Sync Selection has to be toggled on for this to occur

I've asked another user to test this, and it didn't crash (he has AMD Radeon GFX) but it did cause some visual glitching

I'm currently updating my Nvidia driviers to see if it helps
2019-10-02 12-28-59.mp4

@lichtwerk Actually hold on! I just replicated this on default too Apparently UV Sync Selection has to be toggled on for this to occur I've asked another user to test this, and it didn't crash (he has AMD Radeon GFX) but it did cause some visual glitching I'm currently updating my Nvidia driviers to see if it helps [2019-10-02 12-28-59.mp4](https://archive.blender.org/developer/F7785522/2019-10-02_12-28-59.mp4)

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I did some testing and the bug seem to happen only if there's an 'x-ray' mode on. Test file: eevee_crash.blend

  • Open file. Switch to 'rendered' mode.
  • Enter 'edit' mode. Sometimes you need to go into edit mode and back to object mode couple of times to crash.

Windows-10-10.0.16299 64 Bits
GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

version: 2.81 (sub 12), branch: master, commit date: 2019-10-01 19:51, hash: 3b23685c7d

I did some testing and the bug seem to happen only if there's an 'x-ray' mode on. Test file: [eevee_crash.blend](https://archive.blender.org/developer/F7785524/eevee_crash.blend) - Open file. Switch to 'rendered' mode. - Enter 'edit' mode. Sometimes you need to go into edit mode and back to object mode couple of times to crash. > Windows-10-10.0.16299 64 Bits > GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 > > version: 2.81 (sub 12), branch: master, commit date: 2019-10-01 19:51, hash: `3b23685c7d`
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Author

just confirmed this bug on another computer, Windows 10 GeForce GTX 980M
also also crashes when replicating the previous process from default

just confirmed this bug on another computer, Windows 10 GeForce GTX 980M also also crashes when replicating the previous process from default

Added subscribers: @Jeroen-Bakker, @mano-wii

Added subscribers: @Jeroen-Bakker, @mano-wii
Philipp Oeser was unassigned by Germano Cavalcante 2019-10-02 15:12:54 +02:00
Clément Foucault was assigned by Germano Cavalcante 2019-10-02 15:12:54 +02:00

I can confirm. Here is the call stack before the crash:

	blender.exe!VertBuffer_upload_data(GPUVertBuf * verts) Line 255	C
 	blender.exe!GPU_vertbuf_use(GPUVertBuf * verts) Line 272	C
 	blender.exe!create_bindings(GPUVertBuf * verts, const GPUShaderInterface * interface, unsigned int v_first, const bool use_instancing) Line 390	C
 	blender.exe!batch_update_program_bindings(GPUBatch * batch, unsigned int i_first) Line 457	C
 	blender.exe!batch_vao_get(GPUBatch * batch) Line 328	C
 	blender.exe!GPU_batch_program_set_no_use(GPUBatch * batch, unsigned int program, const GPUShaderInterface * shaderface) Line 343	C
 	blender.exe!draw_geometry_bind(DRWShadingGroup * shgroup, GPUBatch * geom) Line 652	C
 	blender.exe!draw_indirect_call(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 694	C
 	blender.exe!draw_call_batching_flush(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 1080	C
 	blender.exe!draw_call_batching_finish(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 1185	C
 	blender.exe!draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) Line 1333	C
 	blender.exe!drw_draw_pass_ex(DRWPass * pass, DRWShadingGroup * start_group, DRWShadingGroup * end_group) Line 1380	C
 	blender.exe!DRW_draw_pass(DRWPass * pass) Line 1430	C
 	blender.exe!workbench_forward_draw_scene(WORKBENCH_Data * vedata) Line 775	C
 	blender.exe!workbench_transparent_draw_background(void * vedata) Line 67	C
 	blender.exe!drw_engines_draw_background() Line 1185	C
 	blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1690	C
 	blender.exe!DRW_draw_view(const bContext * C) Line 1566	C
 	blender.exe!view3d_draw_view(const bContext * C, ARegion * ar) Line 1534	C
 	blender.exe!view3d_main_region_draw(const bContext * C, ARegion * ar) Line 1559	C
 	blender.exe!ED_region_do_draw(bContext * C, ARegion * ar) Line 539	C
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 630	C
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 768	C
 	blender.exe!wm_draw_update(bContext * C) Line 948	C
 	blender.exe!WM_main(bContext * C) Line 424	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 493	C

And this is the GPUVertBuf that was intended to be uploaded:

verts
0x000001cf050823b8 {format={attr_len=29 name_len=46 stride=955 ...} vertex_len=3722304989 vertex_alloc=...}
    format: {attr_len=29 name_len=46 stride=955 ...}
    vertex_len: 3722304989
    vertex_alloc: 3722304989
    vbo_id: 3722304989
    usage: 1
    dirty: 1
    data: 0xdddddddddddddddd <Error reading characters of string.>

Cc: @Jeroen-Bakker

I can confirm. Here is the call stack before the crash: ``` blender.exe!VertBuffer_upload_data(GPUVertBuf * verts) Line 255 C blender.exe!GPU_vertbuf_use(GPUVertBuf * verts) Line 272 C blender.exe!create_bindings(GPUVertBuf * verts, const GPUShaderInterface * interface, unsigned int v_first, const bool use_instancing) Line 390 C blender.exe!batch_update_program_bindings(GPUBatch * batch, unsigned int i_first) Line 457 C blender.exe!batch_vao_get(GPUBatch * batch) Line 328 C blender.exe!GPU_batch_program_set_no_use(GPUBatch * batch, unsigned int program, const GPUShaderInterface * shaderface) Line 343 C blender.exe!draw_geometry_bind(DRWShadingGroup * shgroup, GPUBatch * geom) Line 652 C blender.exe!draw_indirect_call(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 694 C blender.exe!draw_call_batching_flush(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 1080 C blender.exe!draw_call_batching_finish(DRWShadingGroup * shgroup, DRWCommandsState * state) Line 1185 C blender.exe!draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) Line 1333 C blender.exe!drw_draw_pass_ex(DRWPass * pass, DRWShadingGroup * start_group, DRWShadingGroup * end_group) Line 1380 C blender.exe!DRW_draw_pass(DRWPass * pass) Line 1430 C blender.exe!workbench_forward_draw_scene(WORKBENCH_Data * vedata) Line 775 C blender.exe!workbench_transparent_draw_background(void * vedata) Line 67 C blender.exe!drw_engines_draw_background() Line 1185 C blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1690 C blender.exe!DRW_draw_view(const bContext * C) Line 1566 C blender.exe!view3d_draw_view(const bContext * C, ARegion * ar) Line 1534 C blender.exe!view3d_main_region_draw(const bContext * C, ARegion * ar) Line 1559 C blender.exe!ED_region_do_draw(bContext * C, ARegion * ar) Line 539 C blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 630 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 768 C blender.exe!wm_draw_update(bContext * C) Line 948 C blender.exe!WM_main(bContext * C) Line 424 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 493 C ``` And this is the `GPUVertBuf` that was intended to be uploaded: ``` verts 0x000001cf050823b8 {format={attr_len=29 name_len=46 stride=955 ...} vertex_len=3722304989 vertex_alloc=...} format: {attr_len=29 name_len=46 stride=955 ...} vertex_len: 3722304989 vertex_alloc: 3722304989 vbo_id: 3722304989 usage: 1 dirty: 1 data: 0xdddddddddddddddd <Error reading characters of string.> ``` Cc: @Jeroen-Bakker

Taking care of this!

Taking care of this!

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 02ad256f9a

This issue was referenced by 02ad256f9aaf032bcac93b5c4c60ef7a9003a8bf
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70414
No description provided.