Fix T70414 EEVEE: Crash with 2 viewports, UV edit and sync selection